--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "workbox": "^0.0.0",
+    "workbox-build": "^7.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
